# Real-ESRGAN-ncnn-vulkan-UI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/: about.md  resources.qrc
src/: about_window.cpp  about_window.h  aboutwindow.cpp  aboutwindow.h  confirm_dialog.cpp  confirm_dialog.h  download_manager.cpp  download_manager.h  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  message_log.cpp  message_log.h  messagelog.cpp  messagelog.h  options.cpp  options.h  options_window.cpp  options_window.h  optionswindow.cpp  optionswindow.h  palette.h  path_picker.cpp  path_picker.h  pathpicker.cpp  pathpicker.h  queue.cpp  queue.h  queue_window.cpp  queue_window.h  settings_panel.cpp  settings_panel.h  settingspanel.cpp  settingspanel.h
